1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.tcl: Delete extra line in sitecmd.

	* XPixmap.m ([XPixmap -setFile:]): Constify argument.
	Reformatting throughout.

	* XPixmap.h (XPixmap): Constify filename.
	Constify argument to setFile.
	Reformatting throughout.

	* XColormap.m ([XColormap -setColor:ToName:]): Constify ToName
	argument.  Reformatting throughout.

	* XColormap.h: Constify ToName argument to setColor.
	Reformatting throughout.

	* Form.m ([Form -addLineName:Variable:Type:]): Constify first
	argument.  Reformatting throughout.

	* Form.h: Constify first argument to addLineName.
	Reformatting throughout.

	* CanvasItem.m: Reformatting throughout.

	* CanvasItem.h (CanvasItem): Constify item.
	Reformatting throughout.

	* RectangleNodeItem.m ([RectangleNodeItem -createItem]): Cast
	argument to free to void* to avoid warning.
	Reformatting throughout.

	* RectangleNodeItem.h: Reformatting throughout.

	* Rectangle.[hm]: Reformatting throughout.

	* OvalNodeItem.m ([OvalNodeItem -createItem]): Cast argument
	to free to void* to avoid warning. 
	Reformatting throughout.

	* OvalNodeItem.h (NodeItem): Reformatting throughout.

	* NodeItem.m ([NodeItem -setColor:]): Constify argument.
	([NodeItem -setBorderColor:]): Likewise.
	([NodeItem -setString:]): Likewise.
	Reformatting throughout.

	* NodeItem.h (NodeItem): Constify text, item and string.
	Constify argument to setString, setColor, and setBorderColor.
	Reformatting throughout.

	* LinkItem.m ([LinkItem -setColor:]): Constify argument.
	Reformatting throughout.

	* LinkItem.h (LinkItem): Constify line1 and line2.
	Constify argument to setColor.
	Reformatting throughout.

	* BLTGraph.m ([BLTGraph -title:]): Constify argument.
	([BLTGraph -axisLabelsX:Y:]): Constify arguments.
	([GraphElement -getName]): Constify return.
	([BLTVector -getName]): Likewise.
	([GraphElement -setLabel:]): Constify argument.
	([GraphElement -setColor:]): Likewise.