@@ -1,3 +1,11 @@
+1997-12-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* analysis.tcl: Delete troublesome newlines for parameters
+	in first line of active_item_info.
+
+	* control.[hm] (tkobjc_setupHistogramActiveOutlierMarker): Use 
+	a descriptive name (was tkobjc_setupHistogramMisc).
+
 1997-12-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* simtools.tcl: Delete extra line in sitecmd.
